# repro-typer-improper-args

./: README.md  pyproject.toml
repro/: actually.py  main.py  new.py
