[tool.poetry]
name        = "repro-typer-improper-args"
version     = "0.1.0"
description = ""
authors     = ["Julian Torres <julian.torres@mongodb.com>"]
readme      = "README.md"
packages    = [{ include = "repro" }]

[tool.poetry.dependencies]
python = "^3.10"
typer  = { version = "^0.9.0", extras = ["all"] }

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repro = "repro.main:cli"
